@@ -106,5 +106,6 @@ prices at current values, or prices at the time of the report date.</para>
 	  will be placed in a slice marked "other".
 	</para>
 	</listitem></itemizedlist>
+</para>
 </sect1>
 </article>
